# Misc-GSoC

./: .gitmodules  6-11-2013-gsoc-chat.txt  Haskell-ghc-simd-plan.html  Misc_Util.sml  README.md  cpuid-mlton.c  design.org  existing-xmm-code.sml  gcc-intrin-test.c  gcc-intrinsics  gcc-x86-intrinsics  hello.sml  mlton-test.sml  my-mlton  notes.org  opcodes  opcodes.txt  simd-refrences  simd-scratch  simd-scratch.sml  sse-scratch.sml  todo.org  xmm-assembly.m4.sml  xmm-assembly.sml
gcc/: avx2.c  avx2.s  gcc-headers-info  gcc-intrinsics
misc/: cpuid.c  hello.c  mlton-hello.sml  mlton.sh  platform
misc-code/: Makefile.am  Mlton-help  configure.ac  cpuid.c  make.sh  mlton-compile.sh  mlton.sh
misc/intrinsics-test/: silly.c  temp.c
mlton-skel/: configure.ac  configure.scan
mlton-skel/mlton/: Makefile
resources/: Haskell-ghc-simd-design.html  mlton-overview
simd-code/: AMD64-SSE.sml  AVX-Types.sig  AVX.sig  AVX2.sig  AVX_TYPES.sig  C-AVX.mlb  C-SSE.c  C-SSE.el  C-SSE.mlb  C-SSE.old  C-SSE.pl  C-SSE.sh  C-SSE.sig  C-SSE.sml  C-SSE2.c  C-SSE2.el  C-SSE2.mlb  C-SSE2.sh  C-SSE2.sig  C-SSE2.sml  C-SSE3.c  C-SSE3.mlb  C-SSE3.sh  C-SSE3.sml  C-SSE4.c  C-SSE4.mlb  C-SSE4.sh  C-SSE4.sml  Misc.el  SIMD.el  SIMD.sig  SIMD.sml  SIMD_Software.sml  SSE-Types.sig  SSE.sig  SSE2.sig  SSE3.sig  SSE4.sig  Software-SSE.c  Software-SSE.mlb  (+12 more)
simd-code/C-SSE/: C-SSE  C-SSE.asm  C-SSE.basis  C-SSE.c  C-SSE.machine  (+18 more)
test/: #gcc-intrin-test.c#  .#gcc-intrin-test.c  clang-test.c  gcc-intrin-test.asm  gcc-intrin-test.c  gcc-intrin-test.s  mlton-test.sml  simd-test.sml  sml-test.sml
(+27 files in other folders)
